--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.5"
+  },
+    "engines": {
+    "node": "18.x"
   }
 }
